fixup riot query url
